// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Searchmode change on click 1`] = `
<div
  className="container"
>
  <section
    className="home"
  >
    <div
      className="home__header"
    >
      <div
        className="home__logo-wrap"
      >
        <img
          alt="Sberify Music App"
          className="home__logo"
          src="logo.svg"
        />
      </div>
    </div>
    <form
      className="home__search"
      onSubmit={[Function]}
    >
      <input
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        type="text"
        value=""
      />
      <p
        className="home__message home__message--add"
      >
        Type the name of the artist 
        <span>
          (GeniusAPI)
        </span>
      </p>
      <p
        className="home__message home__message--find"
        onMouseDown={[Function]}
      >
        Can't find? Add your own
      </p>
      <p
        className="home__message home__message--error"
      />
      <button
        className="home__search-button"
        onMouseDown={[Function]}
        type="button"
      >
        <div
          aria-label="animation"
          role="button"
          style={
            Object {
              "height": "100%",
              "margin": "0 auto",
              "outline": "none",
              "overflow": "hidden",
              "width": "100%",
            }
          }
          tabIndex="0"
          title=""
        />
      </button>
      <div
        className="dropdown-menu-wrapper"
      >
        <ul
          className="dropdown-menu"
        />
      </div>
    </form>
  </section>
</div>
`;

exports[`Searchmode change on click 2`] = `
<div
  className="container"
>
  <section
    className="home"
  >
    <div
      className="home__header"
    >
      <div
        className="home__logo-wrap"
      >
        <img
          alt="Sberify Music App"
          className="home__logo"
          src="logo.svg"
        />
      </div>
    </div>
    <form
      className="home__search home__search--focused"
      onSubmit={[Function]}
    >
      <input
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        type="text"
        value=""
      />
      <p
        className="home__message home__message--add"
      >
        Type the name of the artist 
        <span>
          (GeniusAPI)
        </span>
      </p>
      <p
        className="home__message home__message--find"
        onMouseDown={[Function]}
      >
        Can't find? Add your own
      </p>
      <p
        className="home__message home__message--error"
      />
      <button
        className="home__search-button"
        onMouseDown={[Function]}
        type="button"
      >
        <div
          aria-label="animation"
          role="button"
          style={
            Object {
              "height": "100%",
              "margin": "0 auto",
              "outline": "none",
              "overflow": "hidden",
              "width": "100%",
            }
          }
          tabIndex="0"
          title=""
        />
      </button>
      <div
        className="dropdown-menu-wrapper"
      >
        <ul
          className="dropdown-menu"
        />
      </div>
    </form>
  </section>
</div>
`;

exports[`Searchmode change on click 3`] = `
<div
  className="container"
>
  <section
    className="home"
  >
    <div
      className="home__header"
    >
      <div
        className="home__logo-wrap"
      >
        <img
          alt="Sberify Music App"
          className="home__logo"
          src="logo.svg"
        />
      </div>
    </div>
    <form
      className="home__search"
      onSubmit={[Function]}
    >
      <input
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        type="text"
        value=""
      />
      <p
        className="home__message home__message--add"
      >
        Type the name of the artist 
        <span>
          (GeniusAPI)
        </span>
      </p>
      <p
        className="home__message home__message--find"
        onMouseDown={[Function]}
      >
        Can't find? Add your own
      </p>
      <p
        className="home__message home__message--error"
      />
      <button
        className="home__search-button"
        onMouseDown={[Function]}
        type="button"
      >
        <div
          aria-label="animation"
          role="button"
          style={
            Object {
              "height": "100%",
              "margin": "0 auto",
              "outline": "none",
              "overflow": "hidden",
              "width": "100%",
            }
          }
          tabIndex="0"
          title=""
        />
      </button>
      <div
        className="dropdown-menu-wrapper"
      >
        <ul
          className="dropdown-menu"
        />
      </div>
    </form>
  </section>
</div>
`;
